--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "hackerhunt-spectator",
   "version": "0.1.0",
   "private": true,
-  "proxy" : "http://localhost:8080",
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "axios": "^0.18.0",
+    "node-sass": "^4.11.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8"
