--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "proxy": "http://localhost:8080",
   "dependencies": {
     "axios": "^0.18.0",
+    "color": "^3.1.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-html-parser": "^2.0.2",
     "react-scripts": "2.1.8"
   },
   "scripts": {
