--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-html-parser": "^2.0.2",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "snapsvg-cjs": "0.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
