--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "snapsvg-cjs": "0.0.6"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts build",
+    "build": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
