--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "hackerhunt-spectator",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8080",
   "dependencies": {
     "axios": "^0.18.0",
     "color": "^3.1.0",
@@ -14,8 +13,8 @@
     "snapsvg-cjs": "0.0.6"
   },
   "scripts": {
-    "start": "react-scripts build",
-    "build": "react-scripts start",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
